# remote_gitlab_friend

./: LICENSE  README.md  pyproject.toml  requirements.txt
src/rgf/: __main__.py
