[project]
name = "rgf"
version = "0.0.3"
authors = [
  { name="dcoello", email="dcpulido91@gmail.com" },
]
description = "check remote merge request and checkout branch locally"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
rgf = "rgf.__main__:main"

[project.optional-dependencies]
tests = [
  "pytest-mock==3.14.0",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
pythonpath = [
  ".",
  "src",
]
